Fixed footer links not filling height on small viewport widths.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -192,15 +192,20 @@ p.article {
 }
 
 .navbar-nav {
-    float:none;
-    margin:0 auto;
+    float: none;
+    margin: 0 auto;
     display: block;
     text-align: center;
 }
 
 .navbar-nav > li {
     display: inline-block;
-    float:none;
+    float: none;
+}
+
+.navbar-nav > li > a {
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .panel {
